--- a/css/stayle.css
+++ b/css/stayle.css
@@ -38,7 +38,8 @@ h4 {
   font-size: 25px; }
 
 p {
-  margin-bottom: 20px; }
+  margin-bottom: 10px;
+  padding: 20px; }
 
 a {
   text-align: center;
